#richard: 品牌1st step
