# src/route/gateway.go
@@ -2,18 +2,43 @@
 package route
 
 const (
-	CategoryCreateErrorCode = 1001
-	CategoryCreateErrorMsg  = "分类创建失败"
-	CategoryCreateOkMsg     = "分类创建成功"
+	//品牌 brands
+	BrandCode = 1100
+	BrandMsg  = "brand"
+
+	SnowFlakeIdLength = 18
+)
+
+const (
+	RequestBodyErrorCode = 11
+	RequestBodyErrorMsg  = "request query body error"
+
+	BodyStructureErrorCode = 12
+	BodyStructureErrorMsg  = "request body struct format error"
+
+	CreateErrorCode = 13
+	CreateErrorMsg  = "create error"
+	QueryErrorCode  = 14
+	QueryErrorMsg   = "query error"
+	UpdateErrorCode = 15
+	UpdateErrorMsg  = "update error"
+	DeleteErrorCode = 16
+	DeleteErrorMsg  = "delete error"
+	IDErrorCode     = 20
+	IDErrorMsg      = "id error"
+)
+
+const (
+	OperateSuccess = "operate success"
 )
 
 type HttpError struct {
-	Code  int 	`json:"code,omitempty"`
+	Code    string `json:"code,omitempty"`
 	Message string `json:"message,omitempty"`
 }
 
 type HttpOk struct {
-	Code  int 	`json:"code,omitempty"`
+	Code    int `json:"code,omitempty"`
 	Message string `json:"message,omitempty"`
 }
 
@@ -26,6 +51,12 @@ type RequestCategory struct {
 	CategoryStatus  int 	`json:"categoryStatus,omitempty"`
 	ChildCategories  []string `json:"childCategories,omitempty"`
 	ParentCategories []string `json:"parentCategories,omitempty"`
+}
+
+type RequestBrand struct {
+	BrandNameEn string `json:"brandNameEn"`
+	BrandNameCn string `json:"brandNameCn,omitempty"`
+	Status 		int    `json:"brandStatus,omitempty"`
 }
 
 
