# src/route/service.go
@@ -2,11 +2,12 @@
 package route
 
 import (
-	"encoding/json"
+	"errors"
+	"fmt"
 	"github.com/advancevillage/3rd/https"
-	"mms/src/component/category"
 	"mms/src/config"
 	"net/http"
+	"strconv"
 )
 
 type service struct {}
@@ -21,104 +22,62 @@ func NewApiService() *service {
 //@Failure 400 {object} route.HttpError
 //@Failure 404 {object} route.HttpError
 //@Failure 500 {object} route.HttpError
-//@Router /v1/merchandises/version [get]
+//@Router /v1/services/version [get]
 func (s *service) Version(ctx *https.Context) {
 	version := ResponseVersion{}
 	version.Info = config.Services().Version()
 	ctx.JsonResponse(http.StatusOK, version)
 }
 
-//@Summary 创建分类
-//@Produce json
-//@Param {} body route.RequestCategory true "CreateCategory"
-//@Success 200 {object} route.HttpOk
-//@Failure 400 {object} route.HttpError
-//@Failure 404 {object} route.HttpError
-//@Failure 500 {object} route.HttpError
-//@Router /v1/categories [post]
-func (s *service) CreateCategory(ctx *https.Context) {
-	buf, err := ctx.Body()
-	if err != nil {
-		config.Services().LogService().Warning(err.Error())
-		ctx.JsonResponse(http.StatusBadRequest, &HttpError{Code: CategoryCreateErrorCode, Message: CategoryCreateErrorMsg})
-		return
+func (s *service) NewHttpError(apiCode int, apiMsg string, opCode int, opMsg string) *HttpError {
+	return &HttpError{
+		Code: fmt.Sprintf("%d%d", apiCode, opCode),
+		Message: fmt.Sprintf("%s %s", apiMsg, opMsg),
 	}
-	rc := RequestCategory{}
-	err = json.Unmarshal(buf, &rc)
-	if err != nil {
-		config.Services().LogService().Warning(err.Error())
-		ctx.JsonResponse(http.StatusBadRequest, &HttpError{Code: CategoryCreateErrorCode, Message: CategoryCreateErrorMsg})
-		return
+}
+
+func (s *service) NewHttpOk(statusCode int) *HttpOk {
+	return &HttpOk{
+		Code: statusCode,
+		Message: OperateSuccess,
 	}
-	cat := category.Category{}
-	cat.CategoryStatus = rc.CategoryStatus
-	cat.ChildCategories = rc.ChildCategories
-	cat.ParentCategories = rc.ParentCategories
-	err = config.Services().CategoryService().CreateCategory(&cat)
-	if err != nil {
-		config.Services().LogService().Warning(err.Error())
-		ctx.JsonResponse(http.StatusBadRequest, &HttpError{Code: CategoryCreateErrorCode, Message: CategoryCreateErrorMsg})
-		return
+}
+
+func (s *service) page(ctx *https.Context) int {
+	value := ctx.Param("page")
+	page, err := strconv.Atoi(value)
+	if err != nil || page < 0 || page > 50 {
+		page = 0
 	}
-	ctx.JsonResponse(http.StatusOK, &HttpOk{Code: http.StatusOK, Message: CategoryCreateOkMsg})
+	return page
 }
 
-//@Summary 查询商品列表
-//@Produce json
-//@Param {} body route.RequestCategory true "QueryMerchandises"
-//@Success 200 {object} route.HttpOk
-//@Failure 400 {object} route.HttpError
-//@Failure 404 {object} route.HttpError
-//@Failure 500 {object} route.HttpError
-//@Router /v1/merchandises [get]
-func (s *service) QueryMerchandises(ctx *https.Context) {
-
+func (s *service) perPage(ctx *https.Context) int {
+	value := ctx.Param("perPage")
+	perPage, err := strconv.Atoi(value)
+	if err != nil || perPage < 0 || perPage > 100 {
+		perPage = 20
+	}
+	return perPage
 }
 
-//@Summary 创建商品
-//@Produce json
-//@Param {} body route.RequestCategory true "CreateMerchandise"
-//@Success 200 {object} route.HttpOk
-//@Failure 400 {object} route.HttpError
-//@Failure 404 {object} route.HttpError
-//@Failure 500 {object} route.HttpError
-//@Router /v1/merchandises [post]
-func (s *service) CreateMerchandise(ctx *https.Context) {
-
+func (s *service) status(ctx *https.Context) int {
+	value := ctx.Param("status")
+	status, err := strconv.Atoi(value)
+	if err != nil {
+		status = -1
+	}
+	return status
 }
 
-//@Summary 更新商品
-//@Produce json
-//@Param {} body route.RequestCategory true "UpdateMerchandise"
-//@Success 200 {object} route.HttpOk
-//@Failure 400 {object} route.HttpError
-//@Failure 404 {object} route.HttpError
-//@Failure 500 {object} route.HttpError
-//@Router /v1/merchandises/{goodsId} [put]
-func (s *service) UpdateMerchandise(ctx *https.Context) {
-
+func (s *service) pathId(ctx *https.Context) (string, error) {
+	id := ctx.Param("pathId")
+	if len(id) != SnowFlakeIdLength {
+		return "", errors.New(IDErrorMsg)
+	}
+	return id, nil
 }
 
-//@Summary 查询商品
-//@Produce json
-//@Param {} body route.RequestCategory true "QueryMerchandise"
-//@Success 200 {object} route.HttpOk
-//@Failure 400 {object} route.HttpError
-//@Failure 404 {object} route.HttpError
-//@Failure 500 {object} route.HttpError
-//@Router /v1/merchandises/{goodsId} [get]
-func (s *service) QueryMerchandise(ctx *https.Context) {
-
-}
-
-//@Summary 删除商品
-//@Produce json
-//@Param {} body route.RequestCategory true "DeleteMerchandise"
-//@Success 200 {object} route.HttpOk
-//@Failure 400 {object} route.HttpError
-//@Failure 404 {object} route.HttpError
-//@Failure 500 {object} route.HttpError
-//@Router /v1/merchandises/{goodsId} [delete]
-func (s *service) DeleteMerchandise(ctx *https.Context) {
-
+func (s *service) body(ctx *https.Context) ([]byte, error) {
+	return ctx.Body()
 }
